--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "timelapse",
   "version": "0.1.0",
   "private": true,
+  "main": "index.tsx",
   "dependencies": {
+    "@types/events": "^3.0.0",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.5",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-helmet": "^5.0.8",
+    "events": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.1"
   },
@@ -32,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/unsplash-js": "^5.0.0",
+    "unsplash-js": "^5.0.0"
   }
 }
