setup publish environment

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     ]
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^0.2.4",
+    "webpack-cli": "^3.3.3"
   }
 }
